// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should handle details click 1`] = `
<Snackbar
  maxWidth={380}
  onDismiss={[Function]}
  status="error"
>
  <div>
    <div>
      details
    </div>
  </div>
</Snackbar>
`;

exports[`Alert should render with all props 1`] = `
<Snackbar
  maxWidth={380}
  onDismiss={[Function]}
  status="error"
>
  <div>
    <div>
      message
       
      <span>
        <a
          onClick={[Function]}
        >
          View Details
        </a>
      </span>
    </div>
  </div>
</Snackbar>
`;
